# fastapi_weather

./: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
app/: main.py  pyproject.toml
app/api/v1/: authentication.py  user.py  weather.py
app/core/: config.py  db.py  security.py
app/crud/: user.py  weather.py
app/models/: __init__.py  base_class.py  user.py  weather.py
app/schemas/: user.py  weather.py
app/services/: openweather.py
