[project]
# Support Python 3.12+.
requires-python = ">=3.12"

[tool.ruff]
# Decrease the maximum line length to 120 characters.
line-length = 120
select = [
    "E4", "E7", "E9",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "PL", # pylint
    "UP"  # pyupgrade
]
ignore = []

exclude = [
    ".ruff_cache",
    ".vscode-server",
    "__pypackages__",
]



